[tool.poetry]
name = "longlora2"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
numpy = "1.26.0"
rouge_score = "0.1.2"
fire = "0.5.0"
transformers = "4.34.0"
torch = "2.0.0"
tokenizers = "0.14.0"
accelerate = "0.23.0"
datasets = "2.14.5"
deepspeed = "0.10.3"
peft = "0.5.0"
einops = "0.7.0"
bitsandbytes = "0.41.1"
scipy = "1.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
